--- a/estilo/cards.css
+++ b/estilo/cards.css
@@ -34,6 +34,7 @@ article img {
     position: absolute;
     border-radius: 0.5em;
     background: #1C7CCC;
+    color:#000000;
     backface-visibility: hidden;
 }
 
@@ -45,8 +46,6 @@ article h3 {
     justify-content: center;
     align-items: center;
     margin: 0;
-    color:black;
-    background-color: #1C7CCC;
 }
 
 /* Regla para rotar las imágenes y que se vean correctamente cuando se giran las cartas */
