--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -58,33 +58,30 @@ h6 {
 
 a {
   transition: all 0.3s ease;
+  color: #ff852e;
+  background-color: #1C1C1C;
 }
 
 a:link {
-  color: #FFFFFF;              /* blanco sobre fondo negro */
-  background-color: #000000;
-}
-
-a:visited {
-  color: #CCCCCC;              /* gris claro sobre fondo negro */
-  background-color: #000000;
+  color: #FFB380;
+  background-color: #1C1C1C;
 }
 
 a:hover {
-  color: #FFFF00;              /* amarillo brillante */
-  background-color: #000000;
-  text-shadow: 0 0 0.4em #FFFF00;
+  color: #FB9246;
+  background-color: #1C1C1C;
   transform: scale(1.05);
 }
 
 a:focus {
-  outline: 0.15em solid #FFFF00;  
+  outline: 0.15em solid #FB9246;
+  background-color: #1C1C1C;
   outline-offset: 0.2em;
 }
 
 a:active {
   color: #000000;
-  background-color: #00FFFF;   /* cian sobre negro */
+  background-color: #FF9447;
 }
 
 /* =====================
@@ -92,30 +89,30 @@ a:active {
    ===================== */
 
 nav a {
-  color: #FFFFFF;              /* blanco sobre negro */
-  background-color: #000000;
+  color: #f29a57;
+  background-color: #1C1C1C;
   text-decoration: none;
   border-radius: 0.3em;
 }
 
 nav a:hover,
 nav a:focus {
-  color: #000000;              /* negro sobre amarillo */
-  background-color: #FFFF00;  
+  color: #000000;
+  background-color: #FB9246;
 }
 
+/* enlace activo del menú */
 nav a.active {
-  color: #00FFFF;              /* cian brillante */
+  color: #FF8000;
   background-color: #000000;
   font-weight: 700;
-  border-bottom: 0.15em solid #00FFFF;
-  text-shadow: 0 0 0.5em #00FFFF;
+  border-bottom: 0.15em solid #FF8000;
 }
 
-/* selección de texto */
+/* selección de texto (AChecker) */
 nav a::selection {
   color: #000000;
-  background-color: #FFFF00;
+  background-color: #FFB380;
 }
 
 /* =====================
@@ -128,11 +125,9 @@ header + p {
 
 header + p a,
 header + p strong {
-  color: #FFFFFF;             /* blanco sobre gris oscuro */
-  background-color: #222222;
+  color: #ff9447;
+  background-color: #040404;
 }
-
-
 
 ul {
   list-style-type: square;              /* cambia la viñeta por cuadrados */
