--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -103,10 +103,9 @@ nav a:focus {
 
 /* enlace activo del menú */
 nav a.active {
-  color: #FF8000;
-  background-color: #000000;
+  color: #000000;
+  background-color: #FF8000 ;
   font-weight: 700;
-  border-bottom: 0.15em solid #FF8000;
 }
 
 /* selección de texto (AChecker) */
