--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -62,12 +62,26 @@ a {
   background-color: #1C1C1C;
 }
 
-
+a:link {
+  color: #FFB380;
+  background-color: #1C1C1C;
+}
 
 a:hover {
   color: #FB9246;
   background-color: #1C1C1C;
   transform: scale(1.05);
+}
+
+a:focus {
+  color: #FB9246;
+  background-color: #1C1C1C;  
+  outline-offset: 0.2em;
+}
+
+a:active {
+  color: #000000;
+  background-color: #FF9447;
 }
 
 
