--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -63,7 +63,7 @@ a {
 }
 
 a:link {
-  color: #FFB380;
+  color: #f29a57;
   background-color: #1C1C1C;
 }
 
@@ -81,7 +81,7 @@ a:focus {
 
 a:active {
   color: #000000;
-  background-color: #FF9447;
+  background-color: #FF8000;
 }
 
 
@@ -103,6 +103,10 @@ nav a.active {
   font-weight: 700;
 }
 
+nav a:hover {
+  color: #000000;
+  background-color: #FB9246;
+}
 
 
 
