--- a/estilo/cards.css
+++ b/estilo/cards.css
@@ -1,3 +1,4 @@
+/* Yeray Rodríguez Granda UO284247 */
 /* MotoGP-Desktop*/
 /* Hoja de estilo para el juego de memoria con cartas */
 
@@ -56,6 +57,6 @@ article img {
 
 @media (min-width: 320px) and (max-width: 799px) {
     main article {
-        width: 100%;
+        width: 100%; /* Redefinición de width */
     }
 }
