--- a/estilo/layout-cards.css
+++ b/estilo/layout-cards.css
@@ -1,3 +1,6 @@
+/*Yeray Rodríguez Granda UO284247*/
+/*Layout juego de cartas de memoiria del proyecto MotoGP-Desktop*/
+
 main {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 columnas */
@@ -29,7 +32,7 @@ main > article {
 
 @media (min-width: 320px) and (max-width: 799px) {
     main {
-        grid-template-columns: repeat(2, 1fr); 
+        grid-template-columns: repeat(2, 1fr); /* Redefinición */
     }
 }
 
