--- a/estilo/layout.css
+++ b/estilo/layout.css
@@ -207,20 +207,24 @@ section > div{
       justify-content: center;
     }
     header+p {
-        display: none;               /* oculta las migas */
+      display: none;               /* oculta las migas */
     }
       
     video {
-        width: 100%;
-        height: auto;
+      width: 100%;
+      height: auto;
     }
         
     audio {
-        width: 100%;
+      width: 100%;
     }
 
     article h2 + img{
       width: 100%;
       height: 100vh;
+    }
+    
+    input[type="file"] {
+      width: 80%;
     }
 }
