--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -188,7 +188,7 @@ table {
 }
 
 th {
-  background-color: #FF8000;        /* naranja principal */
+  background-color: #FB9246;        /* naranja principal */
   color: #1C1C1C;
   text-transform: uppercase;
   font-weight: 700;
